Adapt to gen-template changes

--- a/crePhp/cre/db-config.php.tmpl
+++ b/crePhp/cre/db-config.php.tmpl
@@ -1,7 +1,7 @@
 <?php
   $dbData = [];
   // add mySQL data
-{{ $CurrentContainer := where $ "ID" .Docker.CurrentContainerID | first }} 
+  // Current Container Name : {{ $CurrentContainer.Name }}
 {{ if $CurrentContainer.Env.MYSQL_DB }}
  {{ range $mysqlServerPWD, $containers := groupByMulti $ "Env.MYSQL_ROOT_PWD" "," }}
   {{ range $index, $container := $containers }}
