--- a/creProxy/cre/nginx.tmpl
+++ b/creProxy/cre/nginx.tmpl
@@ -1,5 +1,4 @@
-{{ $CurrentContainer := where $ "ID" .Docker.CurrentContainerID | first }}
-
+# Current Container Name : {{ $CurrentContainer.Name }}
 {{ define "upstream" }}
 	{{ if .Address }}
 		{{/* If we got the containers from swarm and this container's port is published to host, use host IP:PORT */}}
