--- a/creProxy/cre/proxy.conf.tmpl
+++ b/creProxy/cre/proxy.conf.tmpl
@@ -1,4 +1,4 @@
-{{ $CurrentContainer := where $ "ID" .Docker.CurrentContainerID | first }}
+# Current Container Name : {{ $CurrentContainer.Name }}
 {{ $CurrentDomain := or $CurrentContainer.Env.CRE_DOMAIN "localhost" }}
 
 # If we receive X-Forwarded-Proto, pass it through; otherwise, pass along the
