Adapt to new standard

--- a/creMysql/cre/mysql-add-dbs.sh.tmpl
+++ b/creMysql/cre/mysql-add-dbs.sh.tmpl
@@ -1,9 +1,10 @@
 #!/bin/bash 
+
+# Current Name : {{ $CurrentContainer.Name }}
 export TERM=xterm
 echo "mysql add databases:"
 sleep 20
 
-{{ $CurrentContainer := where $ "ID" .Docker.CurrentContainerID | first }}
 {{ $rootPassword := or $CurrentContainer.Env.MYSQL_ROOT_PWD "_secret_" }}
 
 {{ range $mysqlDb, $containers := groupByMulti $ "Env.MYSQL_DB" "," }}
