--- a/creProxy/cre/openssl.sh.tmpl
+++ b/creProxy/cre/openssl.sh.tmpl
@@ -1,21 +1,22 @@
 #!/bin/sh 
-
+sleep 0.1
 # Current Container Name : {{ $CurrentContainer.Name }}
 if ! [ -e /etc/letsencrypt/openssl ]
 then
    mkdir /etc/letsencrypt/openssl
 fi
 
-{{ if (not (exists "/etc/letsencrypt/openssl/dhparam.pem")) }}
 if ! [ -e /etc/letsencrypt/openssl/dhparam.pem ]
 then
-   openssl dhparam -out /etc/letsencrypt/openssl/dhparam.pem 4096
+   cp /cre/dhparam.pem.default /etc/letsencrypt/openssl/dhparam.pem
+   echo "Generate new dhparam.pem"
+   openssl dhparam -out /etc/letsencrypt/openssl/dhparam.pem 4096 &
 fi
-{{ end }}
 
 {{ $CurrentDomain := or $CurrentContainer.Env.CRE_DOMAIN "localhost" }}
+{{ $LocalHost := $CurrentDomain }}
 
-openssl req -batch -config /cre/glue/openssl.cfg -new -x509 -sha256 -newkey rsa:2048 -nodes -keyout /etc/letsencrypt/openssl/{{ $CurrentDomain }}.key.pem -days 365 -out /etc/letsencrypt/openssl/{{ $CurrentDomain }}.cert.pem
+openssl req -batch -config /cre/openssl.cfg -new -x509 -sha256 -newkey rsa:2048 -nodes -keyout /etc/letsencrypt/openssl/{{ $CurrentDomain }}.key.pem -days 365 -out /etc/letsencrypt/openssl/{{ $CurrentDomain }}.cert.pem
 
 {{ range $subdomain, $containers := groupByMulti $ "Env.CRE_SUBDOMAIN" "," }}
 
@@ -24,9 +25,13 @@ openssl req -batch -config /cre/glue/openssl.cfg -new -x509 -sha256 -newkey rsa:
 
 # {{ $host }}
 # for localhost create openssl self-signed
-openssl req -batch -config /cre/glue/openssl.cfg -new -x509 -sha256 -newkey rsa:2048 -nodes -keyout /etc/letsencrypt/openssl/{{ $host }}.key.pem -days 365 -out /etc/letsencrypt/openssl/{{ $host }}.cert.pem
+openssl req -batch -config /cre/openssl.cfg -new -x509 -sha256 -newkey rsa:2048 -nodes -keyout /etc/letsencrypt/openssl/{{ $host }}.key.pem -days 365 -out /etc/letsencrypt/openssl/{{ $host }}.cert.pem
 
 {{ end }}
 
 # Finally reload nginx
 #nginx -s reload
+
+## Todo: Create script-file for adding lines to /etc/hosts, i.e. 127.0.0.1    www.localhost.tambora.org
+## or/and add html file for localhost to show subdomains and manual for editing etc/hosts
+
