--- a/creProxy/cre/certbot.sh.tmpl
+++ b/creProxy/cre/certbot.sh.tmpl
@@ -1,4 +1,5 @@
 #!/bin/sh 
+sleep 3
 
 until [ $(pgrep nginx | wc -l)  > 0 ]
 do
@@ -19,8 +20,8 @@ fi
 ## fi
 
 {{ $CurrentDomain := or $CurrentContainer.Env.CRE_DOMAIN "localhost" }}
-{{ $LocalHost :=  or (hasSuffix "localhost" $CurrentDomain) (hasPrefix "localhost" $CurrentDomain)
-## Localhost?: $LocalHost ## 
+{{ $LocalHost :=  or (hasSuffix "localhost" $CurrentDomain) (hasPrefix "localhost" $CurrentDomain) }}
+## Localhost?: {{ $LocalHost }} ## 
 
 # use --staging for development and during implementation - works not for localhost / use openssl instead
 # staging does not work with Strict-Transport-Security - see proxy.tmpl
