--- a/creNginxPhp/cre/db-config.php.tmpl
+++ b/creNginxPhp/cre/db-config.php.tmpl
@@ -59,10 +59,10 @@
 
   // add sqlite data
 {{ if $CurrentContainer.Env.SQLITE_DB }}
-    $dbName = '{{ $CurrentContainer.Env.POSTGRES_DB }}';
+    $dbName = '{{ $CurrentContainer.Env.SQLITE_DB }}';
     $host = '{{ $CurrentContainer.IP }}';
     $fileName='/cre/www/sqlite/'.$dbName.'.db'; 
-    $dbData['pgsql:'.$dbName] = 
+    $dbData['sqlite:'.$dbName] = 
      ['type' => 'sqlite', 'host' => $host, 'port' => null, 
       'dbname' => $dbName, 'user' => $dbName, 'password' => null, 
        'pdo' => "sqlite:$fileName"];
