--- a/crePostgres/cre/postgres-add-dbs.sh.tmpl
+++ b/crePostgres/cre/postgres-add-dbs.sh.tmpl
@@ -1,22 +1,11 @@
 #!/bin/bash 
-##sleep 5
 
 # Current Name : {{ $CurrentContainer.Name }}
 export TERM=xterm
 echo "postgres add databases:"
 POSTGRESQL_DATA=/var/lib/postgresql/${POSTGRES_VERSION}/main
 POSTGRESQL_BIN=/usr/lib/postgresql/${POSTGRES_VERSION}/bin
-sleep 2
-
-#First check if already running
-##POSTGRES_LOCAL_RUNNING=0
-##${POSTGRESQL_BIN}/pg_ctl -D $POSTGRESQL_DATA status
-##if [ ! $? -eq 0 ]
-##then
-## echo "Postgres not running yet"
-## POSTGRES_LOCAL_RUNNING=1
-## ${POSTGRESQL_BIN}/pg_ctl -D $POSTGRESQL_DATA -o "-c listen_addresses='localhost'" -w start
-##fi
+sleep 5
 
 until ${POSTGRESQL_BIN}/pg_isready -h localhost -p 5432 -U postgres
 do
@@ -83,6 +72,7 @@ fi
 
 ## Install (or Upgrade) Postgis extensions
 {{ if $container.Env.POSTGIS_VERSION }}
+  echo "Upgrade database to PostGIS: {{ $postgresDb }}"
   {{ $postgisVerson := $container.Env.POSTGIS_VERSION }}
 
   ${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username postgres --dbname="{{$postgresDb}}" -c "CREATE EXTENSION IF NOT EXISTS postgis VERSION \"{{ $postgisVerson }}\" "
@@ -108,9 +98,4 @@ ${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username postgres -c "GRANT ALL PRIV
 {{ end }} 
 ##end of all databases
 
-#stop local postgres again (if used)
-##if [ $POSTGRES_LOCAL_RUNNING -eq 1 ]
-##then
-## echo "Stop local Postgres"
-## ${POSTGRESQL_BIN}/pg_ctl -D $POSTGRESQL_DATA -m fast -w stop
-##fi
+echo "Database setup finished"
